Bug 514200 - Plasma crashed in IonControl::checkQueues() when dragging around a newly-created Weather widget on the desktop
Summary: Plasma crashed in IonControl::checkQueues() when dragging around a newly-crea...
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Weather widget (other bugs)
Version First Reported In: 6.5.80
Platform: KDE Linux Linux
: HI crash
Target Milestone: 1.0
Assignee: Plasma Bugs List
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2026-01-05 20:34 UTC by Nate Graham
Modified: 2026-01-29 15:42 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.6.0
Sentry Crash Report: https://crash-reports.kde.org/organizations/kde/issues/275042/


Attachments
New crash information added by DrKonqi (208.59 KB, text/plain)
2026-01-05 20:34 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2026-01-05 20:34:26 UTC
Application: plasmashell (6.5.80)

ApplicationNotResponding [ANR]: false
Qt Version: 6.10.1
Frameworks Version: 6.23.0
Operating System: Linux 6.18.2-zen2-1-zen x86_64
Windowing System: Wayland
Distribution: KDE Linux
DrKonqi: 6.5.80 [CoredumpBackend]

-- Information about the crash:
I added a Weather widget to the desktop and set it to "New York Laguardia Airport" (NOAA). Then I clicked-and-dragged it to try to move it around. At this point, Plasma crashed

The reporter is unsure if this crash is reproducible.

-- Backtrace (Reduced):
#4  std::__atomic_base<QMutexPrivate*>::load (this=<optimized out>, __m=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qmutex.h:252
#5  std::atomic<QMutexPrivate*>::load (this=<optimized out>, __m=<optimized out>) at /usr/include/c++/15.2.1/atomic:587
#6  QAtomicOps<QMutexPrivate*>::loadRelaxed<QMutexPrivate*> (_q_value=...) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qatomic_cxx11.h:203
#7  QBasicAtomicPointer<QMutexPrivate>::loadRelaxed (this=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qbasicatomic.h:171
#8  QBasicMutex::fastTryLock (this=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qmutex.h:88
#9  QBasicMutex::lock (this=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qmutex.h:44
#10 QMutexLocker<QMutex>::QMutexLocker (this=<optimized out>, mutex=<optimized out>, this=<optimized out>, mutex=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qmutex.h:256
#11 QThread::isRunning (this=0x5636d9550d00) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qthread.cpp:516
#12 0x00007f07bc3c6123 in IonControl::checkQueues (this=0x5636d9171000) at /home/nate/kde/src/kdeplasma-addons/applets/weather/ioncontrol_p.cpp:264
#13 0x00007f07eb58d34f in QtPrivate::QSlotObjectBase::call (this=<optimized out>, r=<optimized out>, a=<optimized out>, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobjectdefs_impl.h:461
#14 doActivate<false> (sender=<optimized out>, signal_index=<optimized out>, argv=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qobject.cpp:4257
#15 0x00007f07eb6f2d24 in QFutureWatcherBase::finished (this=<optimized out>) at /usr/src/debug/qt6-base/build/src/corelib/Core_autogen/include/moc_qfuturewatcher.cpp:241
#16 QFutureWatcherBasePrivate::sendCallOutEvent (this=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qfuturewatcher.cpp:494
#17 QFutureWatcherBase::event (this=<optimized out>, event=<optimized out>) at /usr/src/debug/qt6-base/qtbase/src/corelib/thread/qfuturewatcher.cpp:393
#18 0x00007f07edb4c1c0 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x5636d9403490, e=0x7f05fc033e60) at /usr/src/debug/qt6-base/qtbase/src/widgets/kernel/qapplication.cpp:3305
#19 0x00007f07eb520958 in QCoreApplication::notifyInternal2 (receiver=0x5636d9403490, event=event@entry=0x7f05fc033e60) at /usr/src/debug/qt6-base/qtbase/src/corelib/kernel/qcoreapplication.cpp:1109


Reported using DrKonqi
Comment 1 Nate Graham 2026-01-05 20:34:29 UTC
Created attachment 188243 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 TraceyC 2026-01-07 18:11:01 UTC
I'm not able to reproduce this on kwin & Plasma built from today's git master
Comment 3 TraceyC 2026-01-07 18:27:26 UTC
I did see the same crash after adding a fourth weather widget to the desktop on git-master, and selecting the location San Francisco Int'l Airport (NOAA). The crash happened immediately after exiting settings.

The notable thing is that this location has notices, the other three I added do not.

Core was generated by `/home/tracey/kde/usr/bin/plasmashell --no-respawn'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=11, no_tid=0) at pthread_kill.c:44

warning: 44     pthread_kill.c: No such file or directory
[Current thread is 1 (Thread 0x7f5c22a71bc0 (LWP 3751))]
(gdb) bt
#0  __pthread_kill_implementation (threadid=<optimized out>, signo=11, no_tid=0) at pthread_kill.c:44
#1  __pthread_kill_internal (threadid=<optimized out>, signo=11) at pthread_kill.c:89
#2  __GI___pthread_kill (threadid=<optimized out>, signo=signo@entry=11) at pthread_kill.c:100
#3  0x00007f5c26247646 in __GI_raise (sig=11) at ../sysdeps/posix/raise.c:26
#4  0x00007f5c29f596c5 in KCrash::defaultCrashHandler (sig=11) at /home/tracey/kde/src/kcrash/src/kcrash.cpp:605
#5  0x00007f5c26247780 in <signal handler called> () at /usr/lib/glibc-hwcaps/x86-64-v3/libc.so.6
#6  std::__atomic_base<QMutexPrivate*>::load (this=0x3f0db5d5db77d958, __m=std::memory_order_relaxed)
    at /usr/bin/../lib64/gcc/x86_64-solus-linux/15/../../../../include/c++/15/bits/atomic_base.h:830
#7  std::atomic<QMutexPrivate*>::load (this=0x3f0db5d5db77d958, __m=std::memory_order_relaxed)
    at /usr/bin/../lib64/gcc/x86_64-solus-linux/15/../../../../include/c++/15/atomic:587
#8  QAtomicOps<QMutexPrivate*>::loadRelaxed<QMutexPrivate*>
    (_q_value=<error reading variable: Cannot access memory at address 0x3f0db5d5db77d958>)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/thread/qatomic_cxx11.h:203
#9  QBasicAtomicPointer<QMutexPrivate>::loadRelaxed (this=0x3f0db5d5db77d958)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/thread/qbasicatomic.h:171
#10 QBasicMutex::fastTryLock (this=0x3f0db5d5db77d958)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/thread/qmutex.h:88
#11 QBasicMutex::lock (this=0x3f0db5d5db77d958)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/thread/qmutex.h:44
#12 QMutexLocker<QMutex>::QMutexLocker (mutex=0x3f0db5d5db77d958, this=<optimized out>)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/thread/qmutex.h:256
#13 QThread::isRunning (this=0x55cf28e56580)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/thread/qthread.cpp:516
#14 0x00007f5bf85d5123 in IonControl::checkQueues (this=0x7f5c1807a530)
    at /home/tracey/kde/src/kdeplasma-addons/applets/weather/ioncontrol_p.cpp:264
#15 0x00007f5c26d499a1 in QtPrivate::QSlotObjectBase::call (this=0x55cf21025dd0, r=0x7f5c1807a530, a=0x7ffd73ebcec8)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qobjectdefs_impl.h:461
#16 doActivate<false> (sender=0x55cf25b9ff50, signal_index=4, argv=0x7ffd73ebcec8)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qobject.cpp:4257
#17 0x00007f5c26ee0dce in QFutureWatcherBasePrivate::sendCallOutEvent (this=0x55cf21025d30, event=0x7f5b40045ef0)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qobject.cpp:4312
#18 QFutureWatcherBase::event (this=<optimized out>, event=0x7f5b40045ef0)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/thread/qfuturewatcher.cpp:393
#19 0x00007f5c29440bf0 in QApplicationPrivate::notify_helper (this=<optimized out>, receiver=0x55cf25b9ff50, e=0x7f5b40045ef0)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/widgets/kernel/qapplication.cpp:3305
#20 0x00007f5c29441f72 in QApplication::notify (this=<optimized out>, receiver=0x55cf25b9ff50, e=0x7f5b40045ef0)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/widgets/kernel/qapplication.cpp:2700
#21 0x00007f5c26ce2e54 in QCoreApplication::notifyInternal2 (receiver=0x55cf25b9ff50, event=<optimized out>)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qcoreapplication.cpp:1109
#22 QCoreApplication::sendEvent (receiver=0x55cf25b9ff50, event=<optimized out>)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qcoreapplication.cpp:1549
#23 QCoreApplicationPrivate::sendPostedEvents (receiver=0x0, event_type=0, data=0x55cf1f5af250)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qcoreapplication.cpp:1904
#24 0x00007f5c2700fd5f in QCoreApplication::sendPostedEvents (receiver=0x0, event_type=0)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qcoreapplication.cpp:1757
#25 postEventSourceDispatch (s=0x55cf1f5b78b0)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qeventdispatcher_glib.cpp:246
#26 0x00007f5c254dfb9e in g_main_dispatch (context=0x7f5c18000f60) at ../glib/gmain.c:3565
#27 0x00007f5c254e0c08 in g_main_context_dispatch_unlocked (context=0x7f5c18000f60) at ../glib/gmain.c:4425
#28 g_main_context_iterate_unlocked
    (context=context@entry=0x7f5c18000f60, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>)
    at ../glib/gmain.c:4490
#29 0x00007f5c254e0cf8 in g_main_context_iteration (context=0x7f5c18000f60, may_block=1) at ../glib/gmain.c:4556
#30 0x00007f5c2700f50e in QEventDispatcherGlib::processEvents (this=0x55cf1f5c57b0, flags=...)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qeventdispatcher_glib.cpp:399
#31 0x00007f5c26ced436 in QEventLoop::processEvents (this=0x7ffd73ebd410, flags=...)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qeventloop.cpp:104
#32 QEventLoop::exec (this=0x7ffd73ebd410, flags=...)
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qeventloop.cpp:186
#33 0x00007f5c26ce2099 in QCoreApplication::exec ()
    at /home/build/YPKG/root/qt6-base/build/qtbase-everywhere-src-6.10.1/src/corelib/kernel/qcoreapplication.cpp:1452
#34 0x000055cf08c1a365 in main (argc=<optimized out>, argv=<optimized out>)
    at /home/tracey/kde/src/plasma-workspace/shell/main.cpp:204
Comment 4 Nate Graham 2026-01-28 20:41:17 UTC
This is currently the #7 most common still-unresolved plasmashell crash in Sentry; raising priority.
Comment 5 Bug Janitor Service 2026-01-29 00:49:13 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kdeplasma-addons/-/merge_requests/990
Comment 6 Nate Graham 2026-01-29 15:39:17 UTC
Git commit a6eec229488f8096c110814b7f04d88220f46538 by Nate Graham.
Committed on 29/01/2026 at 15:39.
Pushed by ngraham into branch 'Plasma/6.6'.

applets/weather: fix crash when destroying IonControl


(cherry picked from commit b744ee478d8f8400e6fed0f7c6d25bbe5d8ea83f)

Co-authored-by: Bohdan Onofriichuk <bogdan.onofriuchuk@gmail.com>

M  +3    -0    applets/weather/ioncontrol_p.cpp

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/a6eec229488f8096c110814b7f04d88220f46538
Comment 7 Nate Graham 2026-01-29 15:42:36 UTC
Git commit b744ee478d8f8400e6fed0f7c6d25bbe5d8ea83f by Nate Graham, on behalf of Bohdan Onofriichuk.
Committed on 29/01/2026 at 15:09.
Pushed by ngraham into branch 'master'.

applets/weather: fix crash when destroying IonControl

M  +3    -0    applets/weather/ioncontrol_p.cpp

https://invent.kde.org/plasma/kdeplasma-addons/-/commit/b744ee478d8f8400e6fed0f7c6d25bbe5d8ea83f