applets/weather: fix crash when destroying IonControl

BUG: 514200